# fortune

./: .gitignore  HISTORY.md  LICENSE  Makefile  README.md  SETUP.md  fortune_clipboard.sh  fortune_notification.sh  pyproject.toml  pytest.ini
.beads/: issues.jsonl
.beads/export-state/: 45efbb47f201df1f.json
.specstory/history/: 2026-01-22_11-50Z-cron-test-script-path-issue.md  2026-01-22_12-29Z-comprehensive-test-coverage.md  2026-01-22_12-38Z-bd-prime-query.md  2026-01-22_13-12Z-open-bd-issue-resolution.md  2026-01-22_22-35Z-crontab-fortune-script-not-running.md  2026-01-23_09-29Z-cron-test-fortune-output-issue.md  2026-01-29_10-10Z-fortune-cookie-text-alignment.md
fortune/: main.py  test_main.py
scripts/: fortune_cron.sh  fortune_notification.sh  fortune_terminal_startup.sh  setup_integrations.sh
tests/shell/: test_fortune_clipboard.bats  test_fortune_cron.bats  test_fortune_notification.bats  test_fortune_terminal_startup.bats  test_setup_integrations.bats
