[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortune-python"
version = "0.1.0"
description = "A simple fortune CLI clone in Python"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "degel" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
fortune = "fortune.main:main"

[tool.hatch.build.targets.wheel]
packages = ["fortune"]
